--- a/WebRoot/js/jquery-menu-aim/example/css/bootstrap.css
+++ b/WebRoot/js/jquery-menu-aim/example/css/bootstrap.css
@@ -4781,6 +4781,7 @@ input[type="submit"].btn.btn-mini {
           border-radius: 6px 0 6px 6px;
 }
 
+/*
 .navbar-inverse .navbar-inner {
   background-color: #1b1b1b;
   background-image: -moz-linear-gradient(top, #222222, #111111);
@@ -4792,6 +4793,21 @@ input[type="submit"].btn.btn-mini {
   border-color: #252525;
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff222222', endColorstr='#ff111111', GradientType=0);
 }
+*/
+
+.navbar-inverse .navbar-inner {
+  background-color: #1b1b1b;
+  background-image: -moz-linear-gradient(top, #022508, #095017);
+  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#022508), to(#095017));
+  background-image: -webkit-linear-gradient(top, #022508, #095017);
+  background-image: -o-linear-gradient(top, #022508, #095017);
+  background-image: linear-gradient(to bottom, #022508, #095017);
+  background-repeat: repeat-x;
+  border-color: #022508;
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff022508', endColorstr='#ff095017', GradientType=0);
+}
+
+
 
 .navbar-inverse .brand,
 .navbar-inverse .nav > li > a {
